--- a/package.json
+++ b/package.json
@@ -19,7 +19,83 @@
     "url": "https://github.com/feedsome/feedsome-card-viewer/issues"
   },
   "homepage": "https://github.com/feedsome/feedsome-card-viewer#readme",
+  "scripts": {
+    "clean": "rimraf node_modules doc dist && npm cache clean",
+    "clean-install": "npm run clean && npm install",
+    "clean-start": "npm run clean-install && npm start",
+    "watch": "webpack --watch --progress --profile",
+    "build": "rimraf dist && webpack --progress --profile --bail",
+    "server": "webpack-dev-server --inline --progress --port 8080",
+    "webdriver-update": "webdriver-manager update",
+    "webdriver-start": "webdriver-manager start",
+    "lint": "tslint --force \"src/**/*.ts\"",
+    "e2e": "protractor",
+    "e2e-live": "protractor --elementExplorer",
+    "pretest": "npm run lint",
+    "test": "karma start",
+    "posttest": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html -t html",
+    "test-watch": "karma start --no-single-run --auto-watch",
+    "ci": "npm run e2e && npm run test",
+    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
+    "start": "npm run server"
+  },
+  "dependencies": {
+    "@angular/common": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "^2.4.1",
+    "@angular/http": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@angular/platform-server": "^2.4.1",
+    "@angular/router": "^3.4.1",
+    "core-js": "^2.4.1",
+    "http-server": "^0.9.0",
+    "rxjs": "^5.0.2",
+    "zone.js": "^0.7.4"
+  },
   "devDependencies": {
-    "webpack": "^1.14.0"
+    "@angular/compiler-cli": "^2.4.1",
+    "node-sass": "^4.1.1",
+    "npm-run-all": "^4.0.0",
+    "parse5": "^3.0.1",
+    "gh-pages": "^0.12.0",
+
+    "ts-helpers": "^1.1.2",
+    "ts-node": "^2.0.0",
+    "tslint": "^4.3.1",
+    "typedoc": "^0.5.3",
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0",
+
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "^2.3.1",
+    "ngc-webpack": "^1.1.0",
+    "assets-webpack-plugin": "^3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.26.0",
+    "script-ext-html-webpack-plugin": "^1.4.0",
+    "v8-lazy-parse-webpack-plugin": "^0.3.0",
+
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "css-loader": "^0.26.1",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.9.0",
+    "imports-loader": "^0.7.0",
+    "istanbul-instrumenter-loader": "^1.2.0",
+    "json-loader": "^0.5.4",
+    "ng-router-loader": "^1.0.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^4.1.1",
+    "source-map-loader": "^0.1.5",
+    "string-replace-loader": "^1.0.5",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
+    "url-loader": "^0.5.7"
   }
 }
